--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Authenticator for the Mining Monitor Graph Ql API",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "nodemon -r dotenv/config ./src/app.ts",
+    "build": "",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,10 +25,13 @@
     "@typescript-eslint/eslint-plugin": "5.14.0",
     "@typescript-eslint/parser": "5.14.0",
     "eslint": "8.10.0",
+    "nodemon": "2.0.15",
+    "ts-node": "10.7.0",
     "typescript": "4.6.2"
   },
   "dependencies": {
+    "dotenv": "16.0.0",
     "express": "4.17.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "8.5.1"
   }
 }
